# PyDeck

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: actions.md  architecture.md  scheme.drawio
public/: index.css  index.html  render.js
pydeck/: __main__.py  button.py  config.default.json  config.py  defaults.json  logging.py  plugin.py  pluginmanager.py  pydeck.py  typing.py  utils.py
pydeck/plugins/: README.md  builtin.py  system.py
pydeck/plugins/media_control/: __init__.py
pydeck/public/: config.js  index.css  index.html  render.js
