[tool.poetry]
name = "pydeck"
version = "0.1.0"
description = ""
authors = ["Vlad <89295404+Virashu@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
saaba = { git = "https://github.com/virashu/saaba" }
requests = "^2.31.0"
pydeck-shared = {git = "https://github.com/virashu/pydeck_shared"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
